--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npx eslint ./elements/** --fix",
     "analyze": "npx cem analyze --globs 'elements/**/*'",
-    "build": "npm run analyze && node utils/build.js",
-    "start": "live-server build"
+    "cssmin": "npx postcss css/style.css > css/style.min.css",
+    "build": "node utils/build.js",
+    "start": "npm run build && live-server build"
   },
   "repository": {
     "type": "git",
@@ -22,12 +23,16 @@
   },
   "homepage": "https://github.com/Heydon/bruck#readme",
   "dependencies": {
+    "cssnano": "^6.0.1",
+    "@custom-elements-manifest/analyzer": "^0.6.6",
     "fs-jetpack": "^5.1.0",
-    "live-server": "^1.2.2",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
+    "postcss-easy-import": "^4.0.0"
   },
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.6",
+    "live-server": "^1.1.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.3.1",
