--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "version": "0.0.1",
   "description": "The declarative interface prototyping tool.",
   "main": "index.html",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npx eslint ./elements/** --fix",
-    "analyze": "npx cem analyze --globs 'elements/**/*'",
-    "cssmin": "npx postcss css/style.css > css/style.min.css",
-    "build": "node utils/build.js",
-    "start": "npm run build && live-server build"
+    "analyze": "npx cem analyze --globs 'elements/**/*'"
   },
-  "pre-commit": [
-    "analyze"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Heydon/bruck.git"
@@ -25,22 +22,13 @@
     "url": "https://github.com/Heydon/bruck/issues"
   },
   "homepage": "https://github.com/Heydon/bruck#readme",
-  "dependencies": {
-    "@custom-elements-manifest/analyzer": "^0.6.6",
-    "cssnano": "^6.0.1",
-    "fs-jetpack": "^5.1.0",
-    "nunjucks": "^3.2.4",
-    "postcss": "^8.4.24",
-    "postcss-cli": "^10.1.0",
-    "postcss-easy-import": "^4.0.0"
-  },
   "devDependencies": {
+    "@custom-elements-manifest/analyzer": "^0.6.6",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "live-server": "^1.1.0",
-    "pre-commit": "^1.2.2",
     "prettier": "2.8.1"
   }
 }
